--- a/src/app/components/panel/panel.component.html
+++ b/src/app/components/panel/panel.component.html
@@ -3,7 +3,9 @@
     <div class="row d-flex align-items-center justify-content-end mx-3">
         <div class="col-auto">
             <p class="mb-0">
-                <button class="btn btn-link p-0"><i class="bi bi-info-circle-fill"></i></button>
+                <button class="btn btn-link p-0" (click)="openModal('pagesHelpModal')">
+                    <i class="bi bi-info-circle-fill"></i>
+                </button>
                 Nombre de págines:
             </p>
         </div>
@@ -27,7 +29,9 @@
     <div class="row d-flex align-items-center justify-content-end mx-3 mt-2 mb-4">
         <div class="col-auto">
             <p class="mb-0">
-                <button class="btn btn-link p-0"><i class="bi bi-info-circle-fill"></i></button>
+                <button class="btn btn-link p-0" (click)="openModal('languageHelpModal')">
+                    <i class="bi bi-info-circle-fill"></i>
+                </button>
                 Nombre de llenguatges:
             </p>
         </div>
@@ -47,6 +51,8 @@
             </div>
         }
     </div>
+
+    <app-modal></app-modal>
 
 </form>
 
