--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -154,7 +154,7 @@
 
                         @if(errorSubmitBudget){
                             <div class="row my-2">
-                                <small class="text-danger">No registrat. Revisa que les teves dades siguin correctes.</small>
+                                <small class="text-danger">No registrat. Revisa que el presupost i les teves dades siguin correctes.</small>
                             </div>
                         }
 
