--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,3 @@
-<!-- Image and text -->
 <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand mx-3" href="#">
       <img src="logo.svg" width="30" height="30" class="d-inline-block align-top mx-1" alt="">
@@ -36,7 +35,7 @@
                             </div>
                             <div class="col-md-2 m-1">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="seo-check" formControlName="seo" (change)="updateBudget()">
+                                    <input class="form-check-input" type="checkbox" id="seo-check" formControlName="seo" (change)="updateBudget()" [checked]="budget.seo">
                                     <label class="form-check-label" for="seo-check">
                                         Afegir
                                     </label>
@@ -60,7 +59,7 @@
                             </div>
                             <div class="col-md-2 m-1">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="ads-check" formControlName="ads" (change)="updateBudget()">
+                                    <input class="form-check-input" type="checkbox" id="ads-check" formControlName="ads" (change)="updateBudget()" [checked]="budget.ads">
                                     <label class="form-check-label" for="ads-check">
                                         Afegir
                                     </label>
@@ -84,7 +83,7 @@
                             </div>
                             <div class="col-md-2 m-1">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="web-check" formControlName="web" (change)="updateBudget()">
+                                    <input class="form-check-input" type="checkbox" id="web-check" formControlName="web" (change)="updateBudget()" [checked]="budget.web">
                                     <label class="form-check-label" for="web-check">
                                         Afegir
                                     </label>
@@ -92,7 +91,13 @@
                             </div>
                         </div>
                     </div>
-                    @if(budget.web){<app-panel (emitPanelValue)="setInfoPanel($event)"></app-panel>}
+                    @if(budget.web){
+                        <app-panel 
+                        [pagesURL]="budget.pages"
+                        [langURL]="budget.languages"
+                        (emitPanelValue)="setInfoPanel($event)">
+                        </app-panel>
+                    }
                 </div>
 
                 <div class="row text-end mx-3 my-5">
