--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -26,3 +26,16 @@
         </div>
     </div>
 </div>
+
+<div class="modal fade" id="SubmitBudgetModal" tabindex="-1" role="dialog" aria-labelledby="SubmitBudgetModalTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header justify-content-center">
+                <h4 class="modal-title" id="SubmitBudgetModalTitle">Registre</h4>
+            </div>
+            <div class="modal-body text-center">
+                El seu pressupost s'ha registrat correctament.
+            </div>
+        </div>
+    </div>
+</div>
