--- a/src/app/components/budget-list/budget-list.component.scss
+++ b/src/app/components/budget-list/budget-list.component.scss
@@ -4,12 +4,14 @@
     &:hover {
         color: #0e53de !important;
     }
-
-    &:active {
-        font-weight: bold;
-    }
 }
+
+.btn-nav-custom.active {
+    font-weight: bold;
+    color: #0e53de !important; 
+  }
 
 .search-icon {
     right: 15px;
  }
+  
